feat: add Vehicle module routes
